Ex 72 - Criando um novo bloco Volto

--- a/frontend/src/addons/intranet_interagi/src/theme/_variables.scss
+++ b/frontend/src/addons/intranet_interagi/src/theme/_variables.scss
@@ -11,8 +11,9 @@ $page-font-template: $custom-fontname, sans-serif !default;
 $white: #fff;
 $blue-for-grey-contrast: #0070a2 !default;
 $darkBlue: #023d6b !default;
+$marfim: #fffff0 !default;
 
 // Outras Variáveis
 $link-color: $darkBlue;
 $link-color-hover: $blue-for-grey-contrast;
-$page-background: $white;
+$page-background: $marfim;
